refactor(role): restructure RoleService, RoleMapper, and RoleController
- Refactored RoleService to improve logic and modularity.
- Reorganized RoleMapper for better mapping performance and readability.
- Restructured RoleController to enhance endpoint clarity and alignment with updated service logic.