@@ -7,12 +7,10 @@ import NoCountry.Fineazily.model.entity.Role;
 import NoCountry.Fineazily.model.mapper.RoleMapper;
 import NoCountry.Fineazily.repostory.RoleRepository;
 import NoCountry.Fineazily.service.interfaces.RoleService;
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 @Service
@@ -22,7 +20,11 @@ public class RoleServiceImpl implements RoleService {
     private final RoleMapper roleMapper;
     private final RoleRepository roleRepository;
 
-    @Transactional
+    private Role findRoleByIdOrThrow(Long id) {
+        return roleRepository.findById(id)
+                .orElseThrow(() -> new RoleNotFoundException("Role not found with id: " + id));
+    }
+
     @Override
     public void create(RoleReq roleReq) {
         Role role = roleMapper.toEntity(roleReq);
@@ -31,32 +33,27 @@ public class RoleServiceImpl implements RoleService {
 
     @Override
     public RoleRes findById(Long id) {
-        Role role = roleRepository.findById(id)
-                .orElseThrow(() -> new RoleNotFoundException("Role not found with id: " + id));
-        return roleMapper.toRoleRes(role);
+        Role role =findRoleByIdOrThrow(id);
+        return roleMapper.toDto(role);
     }
 
     @Override
     public List<RoleRes> findAll() {
-        List<Role> roles = roleRepository.findAll();
-        return roles.stream().map(roleMapper::toRoleRes)
-                .collect(Collectors.toList());
+        return roleRepository.findAll().stream()
+                .map(roleMapper::toDto)
+                .toList();
     }
 
-    @Transactional
     @Override
     public void update(Long id, RoleReq roleReq){
-        Role role = roleRepository.findById(id)
-               .orElseThrow(() -> new RoleNotFoundException("Role not found with id: " + id));
+        Role role =findRoleByIdOrThrow(id);
         roleMapper.updateRole(roleReq, role);
         roleRepository.save(role);
     }
 
-    @Transactional
     @Override
     public void delete(Long id) {
-        roleRepository.findById(id)
-                .orElseThrow(() -> new RoleNotFoundException("Role not found with id: " + id));
-        roleRepository.deleteById(id);
+        Role role = findRoleByIdOrThrow(id);
+        roleRepository.deleteById(role.getId());
     }
 }
